# otterai-api

./: .gitignore  CLI_GUIDE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/examples/: obsidian-otter-sync-command.md
docs/plans/: 2026-03-13-obsidian-python-bridge-design.md  2026-03-13-obsidian-python-bridge.md
docs/superpowers/manual-verification/: obsidian-otter-sync.md
docs/superpowers/plans/: 2026-03-12-obsidian-otter-sync.md
docs/superpowers/specs/: 2026-03-11-obsidian-otter-sync-design.md
obsidian-otter-sync/: .gitignore  README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
obsidian-otter-sync/src/: diagnostics.ts  main.ts  settings-tab.ts  settings.ts  state.ts
obsidian-otter-sync/src/notes/: frontmatter.ts  renderer.ts  synchronizer.ts  title.ts
obsidian-otter-sync/src/sync/: orchestrator.ts  python-bridge.ts  retry-queue.ts  schema.ts
obsidian-otter-sync/tests/: orchestrator.test.ts  python-bridge.test.ts  renderer.test.ts  retry-queue.test.ts  settings-tab.test.ts  settings.test.ts  synchronizer.test.ts
obsidian-otter-sync/tests/fixtures/: bridge-success.json  existing-note.md  malformed-user-note.md
obsidian-otter-sync/tests/helpers/: fake-app.ts  obsidian-runtime.mjs  obsidian.ts  register-obsidian.ts
obsidian-otter-sync/utils/: otter_sync.py
otterai/: __init__.py  cli.py  config.py  otterai.py
tests/: test_cli.py  test_obsidian_bridge_script.py  test_otter_sync_smoke.py  test_otterai.py  test_package_init.py
