[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otterai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "keyring>=25.0",
    "python-dotenv>=1.2.1",
    "requests",
    "requests_toolbelt",
]

[project.scripts]
otter = "otterai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["otterai"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "black"]

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that require live Otter.ai credentials",
]
